<resources>
    <string name="app_name">科雷特VDC监控软件</string>

    <!-- 以下自定义string资源 -->
    <string name="my_loge">this is company logo</string>
    <string name="productType">GRT-VDC-T400L</string>

    <string name="activityOldName">补偿记录</string>

    <string name="unitV">V</string>
    <string name="unitA">A</string>

    <string name="U">U相：</string>
    <string name="V">V相：</string>
    <string name="W">W相：</string>
    <string name="otherData">其他数据</string>

    <string name="inVol">输入电压：</string>
    <string name="outVol">输出电压：</string>
    <string name="outImax">输出电流：</string>

    <string name="capVol">电容电压：</string>
    <string name="frequency">频&#12288;&#12288;率：</string>
    <string name="oldEorrer">历史故障：</string>

    <string name="action_setting">setting</string>

    <!--底部导航栏-->
    <string name="lay1">实时数据</string>
    <string name="lay2">录波记录</string>
    <string name="lay3">历史告警</string>
    <string name="lay4">设置</string>
    <string name="lay5">主界面</string>

    <!-- 带占位符的string资源 -->
    <!-- fragment1 -->
    <string name="fragment1Uv">U相：%1$dV</string>
    <string name="fragment1Vv">V相：%1$dV</string>
    <string name="fragment1Wv">W相：%1$dV</string>
    <string name="fragment1Ua">U相：%1$dA</string>
    <string name="fragment1Va">V相：%1$dA</string>
    <string name="fragment1Wa">W相：%1$dA</string>
    <string name="fragment1Rv">R相：%1$dV</string>
    <string name="fragment1Sv">S相：%1$dV</string>
    <string name="fragment1Tv">T相：%1$dV</string>
    <string name="fragment1Capv">电容：%1$dV</string>
    <string name="fragment1hz">频率：%1$dV</string>
    <string name="fragment1AlarmTime">故障次数：%1$d 次</string>
    <string name="fragment1RecordTime">录波记录：%1$d 条</string>
    <string name="fragment1RealAlarm">实时告警</string>
    <string name="fragment1RealFlag">实时遥信</string>
    <string name="fragment1RealData">实 时 数 据</string>
    <string name="fragment1InV">输入电压</string>
    <string name="fragment1CapV">电容电压</string>
    <string name="fragment1OutV">输出电压</string>
    <string name="fragment1OutI">输出电流</string>
    <!-- fragment2 -->
    <string name="fragment2RecordTime">当前为第 %1$d 条 %2$s 记录</string>
    <string name="fragment2RecordContent">发生于 %1$S，跌落到 %2$d V，跌落时长 %3$d ms %4$s</string>
    <string name="fragment2SearchHint">请输入关键字</string>
    <string name="fragment2SearchText">查询</string>
    <string name="fragment2NullFileHint">请先从右侧选择指定录波记录</string>
    <!-- fragment3 -->
    <string name="fragment3ContentText">故障记录</string>
    <string name="fragment3RealState">实时状态</string>
    <string name="fragment3ListNum">编号</string>
    <string name="fragment3ListType">事件类型</string>
    <string name="fragment3ListStateTime">开始时间</string>
    <string name="fragment3ListEndTime">结束时间</string>
    <!-- fragment4 -->
    <string name="fragment4btu">校准</string>
    <string name="fragment4btu2">设置</string>
    <string name="fragment44LoginBtu">登录</string>
    <string name="fragment4LoginHint">密码登录</string>
    <string name="fragment4Utv">U相输出电压</string>
    <string name="fragment4Vtv">V相输出电压</string>
    <string name="fragment4Wtv">W相输出电压</string>
    <string name="fragment4Uitv">U相输出电流</string>
    <string name="fragment4Vitv">V相输出电流</string>
    <string name="fragment4Witv">W相输出电流</string>
    <string name="fragment4Rtv">R相输入电压</string>
    <string name="fragment4Stv">S相输入电压</string>
    <string name="fragment4Ttv">T相输入电压</string>
    <string name="fragment4IvMaX">输入电压上限</string>
    <string name="fragment4ListHint">Setting</string>
    <string name="fragment4SettingHint">输入电压校准</string>
    <string name="fragment4PasswordHint">请输入密码</string>
    <string name="fragmentEdHint">000</string>
    <!-- fragment5 -->
    <string name="fragment5_v">%1$d V</string>
    <string name="fragment5_a">%1$d A</string>
    <string name="fragment5_Time">%1$d </string>
    <string name="fragment5_Hz">%1$s Hz</string>
    <string name="fragment5CapI">%1$d %%</string>
    <string name="fragment5map">状态动画</string>
    <string name="fragment5Yx_1">输入异常</string>
    <string name="fragment5Yx_2">输出过流</string>
    <string name="fragment5Yx_3">输出短路</string>
    <string name="fragment5Yx_4">容量失效</string>
    <string name="fragment5Yx_5">通讯异常</string>
    <string name="fragment5AlarmTime">故障次数</string>
    <string name="fragment5RecordTime">录波次数</string>
    <string name="fragment5RealHz">频率</string>
    <string name="fragment5Loge">GRT-VDC-T4200</string>
    <string name="SystemMode">系统模式：%1$s </string>
    <string name="CompensateMode">补偿模式：%1$s </string>
    <!--<string name="fragment5Dash">输入电压</string>-->
    <!--<string-array name="meter">-->
        <!--<item>0V</item>-->
        <!--<item>50V</item>-->
        <!--<item>100V</item>-->
        <!--<item>150V</item>-->
        <!--<item>200V</item>-->
        <!--<item>250V</item>-->
        <!--<item>300V</item>-->
        <!--<item>350V</item>-->
        <!--<item>400V</item>-->
        <!--<item>450V</item>-->
        <!--<item>500V</item>-->
    <!--</string-array>-->
    
</resources>
