<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:baselineAligned="false"
    android:background="@drawable/txt_rectborder"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:id="@+id/lay5"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linearlayout_Style">

        <TextView
            android:id="@+id/fratext5"
            android:text="@string/lay5"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linearlayout_Style">

        <TextView
            android:id="@+id/fratext1"
            android:text="@string/lay1"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linearlayout_Style">

        <TextView
            android:id="@+id/fratext2"
            android:text="@string/lay2"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lay2_dot"
            android:layout_gravity="top"
            android:visibility="gone"
            android:background="@drawable/little_red_dot"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay3"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linearlayout_Style">

        <TextView
            android:id="@+id/fratext3"
            android:text="@string/lay3"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lay3_dot"
            android:layout_gravity="top"
            android:visibility="gone"
            android:background="@drawable/little_red_dot"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay4"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Linearlayout_Style">

        <TextView
            android:id="@+id/fratext4"
            android:text="@string/lay4"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>