<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment1row"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        >

        <LinearLayout
            android:id="@+id/newRow"
            android:orientation="vertical"
            android:layout_width="664dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/txt_rectborder">

            <android.support.design.widget.TabLayout
                android:id="@+id/tl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:tabTextAppearance="@style/TabLayoutTextStyles"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/colorAccent"
                app:tabIndicatorHeight="5dp"
                app:tabMode="fixed"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/fragment1Chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/ly" />


                <LinearLayout
                    android:id="@+id/ly"
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/dataA"
                        android:text="@string/U"
                        android:textSize="28sp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/dataB"
                        android:text="@string/V"
                        android:textSize="28sp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/dataC"
                        android:text="@string/W"
                        android:textSize="28sp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/oldRow"
            android:layout_toEndOf="@+id/newRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/oldAlarm"
                android:orientation="vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/txt_rectborder"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <!--
                <Button
                    android:id="@+id/alarmButton"
                    android:text="故障记录"
                    android:textSize="24sp"
                    android:background="@drawable/button_style"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="当前故障：99999次"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/alarmTime"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    -->

                <TextView
                    android:id="@+id/fragment1RecorTV"
                    android:text="@string/fragment1RecordTime"
                    android:textSize="28sp"
                    android:textColor="@color/colorBlack"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oldData"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/txt_rectborder"
                android:layout_below="@+id/oldAlarm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--
                <Button
                    android:id="@+id/oldDataButton"
                    android:text="补偿记录"
                    android:textSize="24sp"
                    android:background="@drawable/button_style"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                -->

                <TextView
                    android:id="@+id/fragment1alarmTV"
                    android:text="@string/fragment1AlarmTime"
                    android:textSize="28sp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_below="@+id/fragment1alarmTV"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:scrollbars="vertical">

                    <ListView
                        android:id="@+id/fragment1_ListView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:dividerHeight="2dp"
                        android:divider="#B8B8B8" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>